// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for  AssetRow component Registered Render without crashing renders correctly: registered 1`] = `
<div>
  <div
    class="asset-row-container"
    style="background: rgb(255, 255, 255);"
  >
    <div
      class="asset-row-rearrange-icon"
    >
      <svg />
    </div>
    <div
      class="asset-row-logo-icon"
    >
      <svg />
    </div>
    <div
      class="asset-name"
    >
      Asset Name
    </div>
    <div
      class="koi-earned"
    >
      0
       KOI earned
    </div>
    <div
      class="asset-row-function-icons"
    >
      <svg
        class="asset-row-function-icon"
      />
      <svg
        class="asset-row-function-icon"
      />
    </div>
  </div>
</div>
`;

exports[`Test for  AssetRow component Unregistered Render without crashing renders correctly: unregistered 1`] = `
<div>
  <div
    class="asset-row-container"
    style="background: rgb(238, 238, 238);"
  >
    <div
      class="asset-row-rearrange-icon"
    >
      <svg />
    </div>
    <div
      class="asset-row-logo-icon"
    >
      <svg />
    </div>
    <div
      class="asset-name"
    >
      Asset Name
    </div>
    <button
      class="register-button"
    >
      <div
        class="register-button-icon"
      >
        <svg />
      </div>
      <span>
        Register
      </span>
    </button>
    <div
      class="asset-row-function-icons"
    >
      <svg
        class="asset-row-function-icon"
      />
    </div>
  </div>
</div>
`;
